src/test/deca/context/invalid/SansObjet/DeclVar-UnaryMinus-string-float.deca
// Description:
//    Declaration of a string variable using - operation on a float variable .
// 
// Results:
//     Contextual error
//     Line 13: (RULE 3.28) Incompatible type assignment
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  10.01; 
    string z = -10.01 ; 
}
